<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/product_add_button" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/product_titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingTop="16dp"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/product_mainImageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:contentDescription="@string/shop_list_item_description"
                android:paddingBottom="8dp"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_price_label"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/product_priceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/product_descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@id/product_add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/product_add_button" />

</RelativeLayout>